--- a/app/src/main/res/layout/activity_exibe_contatos.xml
+++ b/app/src/main/res/layout/activity_exibe_contatos.xml
@@ -26,7 +26,9 @@
             android:layout_marginTop="22dp"
             android:autofillHints=""
             android:ems="10"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            tools:ignore="DuplicateSpeakableTextCheck" />
 
         <EditText
             android:id="@+id/editTextName"
@@ -37,7 +39,9 @@
             android:layout_marginTop="5dp"
             android:autofillHints=""
             android:ems="10"
-            android:inputType="text">
+            android:inputType="text"
+            android:minHeight="48dp"
+            tools:ignore="DuplicateSpeakableTextCheck">
 
 
         </EditText>
@@ -101,7 +105,9 @@
             android:layout_marginTop="30dp"
             android:autofillHints=""
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="text"
+            android:minHeight="48dp"
+            tools:ignore="DuplicateSpeakableTextCheck" />
 
         <TextView
             android:id="@+id/textView3"
@@ -123,7 +129,9 @@
             android:layout_alignStart="@+id/editTextName"
             android:autofillHints=""
             android:ems="10"
-            android:inputType="text">
+            android:inputType="text"
+            android:minHeight="48dp"
+            tools:ignore="DuplicateSpeakableTextCheck">
 
         </EditText>
 
@@ -135,7 +143,9 @@
             android:layout_alignStart="@+id/editTextStreet"
             android:autofillHints=""
             android:ems="10"
-            android:inputType="phone|text" />
+            android:inputType="phone|text"
+            android:minHeight="48dp"
+            tools:ignore="DuplicateSpeakableTextCheck" />
 
     </RelativeLayout>
 
