--- a/app/src/main/res/menu/backup_menu.xml
+++ b/app/src/main/res/menu/backup_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="@string/efetuar_backup"
         android:id="@+id/do_backup"/>
 
