--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/item2"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/clear_all"></item>
+        android:title="@string/clear_all"/>
     <item
         android:id="@+id/item3"
         android:title="@string/backup" />
