--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,18 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:minWidth="10dp"
             android:text="@string/titulo"
             android:textSize="30sp" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="118dp"
-            android:layout_height="98dp"
-            android:layout_marginStart="50dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:contentDescription="@string/image_description"
             android:src="@drawable/logo"
             tools:ignore="ImageContrastCheck" />
@@ -38,7 +40,8 @@
         <ListView
             android:id="@+id/listView1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp" />
 
 
 </LinearLayout>
